# obstacle_avoidance_lidar

./: README.md  package.xml  setup.py
launch/: gazebo.launch.py  state_publisher.launch.py
models/urdf/: materials.xacro  obstacle_bot.gazebo  obstacle_bot.xacro
obstacle_avoidance/: obstacle_avoidance_node.py
